--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
