--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --inspect ./dist/index.js",
-    "build": "tsc build --output public",
+    "build": "tsc build public",
     "start": "node dist/index.js"
   },
   "dependencies": {
