--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  },
+    "compilerOptions": {
+      "outDir": "./dist",
+      "rootDir": "./src",
+      "module": "CommonJS",
+      "target": "ES6"
+    },
     "include": ["src"]
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
