--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon --inspect ./dist/index.js",
+    "dev": "nodemon --inspect ./public/index.js",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node public/index.js"
   },
   "dependencies": {
     "express": "^4.21.2",
